--- a/studio-backend/build.gradle
+++ b/studio-backend/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
 
     // Selenium UI test dependencies (only for tests)
     testImplementation 'org.seleniumhq.selenium:selenium-java:4.23.0'
